production/patch/ingressroute_grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.local.seems.fit`)
      services:
        - name: my-kube-prometheus-stack-grafana
          port: 80            # -> targetPort 3000
  # tls:
  #   certResolver: cf               # ← 用 Cloudflare 这个 resolver
